Prepare for new navigation types

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -24,30 +24,30 @@
     <main class="inner-wrapper" role="document">
 
         <!-- Begin - navigation -->
-        <header class="header mdl-layout__header">
-            <div class="mdl-layout__header-row">
+        {#<header class="header mdl-layout__header">#}
+            {#<div class="mdl-layout__header-row">#}
 
-                <!-- Begin - title -->
-                <span class="mdl-layout-title">Title</span>
-                <!-- End - title -->
+                {#<!-- Begin - title -->#}
+                {#<span class="mdl-layout-title">Title</span>#}
+                {#<!-- End - title -->#}
 
-                <!-- Begin - spacer -->
-                <!-- Add spacer, to align navigation to the right -->
-                <div class="mdl-layout-spacer"></div>
-                <!-- End - spacer -->
+                {#<!-- Begin - spacer -->#}
+                {#<!-- Add spacer, to align navigation to the right -->#}
+                {#<div class="mdl-layout-spacer"></div>#}
+                {#<!-- End - spacer -->#}
 
-                <!-- Begin - navigation -->
-                <!-- We hide it in small screens. -->
-                <nav class="mdl-navigation mdl-layout--large-screen-only">
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
-                </nav>
-                <!-- End - navigation -->
+                {#<!-- Begin - navigation -->#}
+                {#<!-- We hide it in small screens. -->#}
+                {#<nav class="mdl-navigation mdl-layout--large-screen-only">#}
+                    {#<a class="mdl-navigation__link" href="">Link</a>#}
+                    {#<a class="mdl-navigation__link" href="">Link</a>#}
+                    {#<a class="mdl-navigation__link" href="">Link</a>#}
+                    {#<a class="mdl-navigation__link" href="">Link</a>#}
+                {#</nav>#}
+                {#<!-- End - navigation -->#}
 
-            </div>
-        </header>
+            {#</div>#}
+        {#</header>#}
         <!-- End - navigation -->
 
         <!-- Begin - content -->
