--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -1,8 +1,8 @@
 <!-- Begin - outer wrapper -->
-<div class="outer-wrapper">
+<div class="outer-wrapper layout-fixed-drawer">
 
-    <!-- Begin - sidebar -->
-    <div class="sidebar mdl-layout__drawer">
+    <!-- Begin - drawer -->
+    <div class="layout-drawer is-visible" aria-hidden="true">
 
         <!-- Begin - title -->
         <span class="mdl-layout-title">Title</span>
@@ -18,10 +18,20 @@
         <!-- End - navigation -->
 
     </div>
-    <!-- End - sidebar -->
+    <!-- End - drawer -->
+
+    <!-- Begin - obfuscator -->
+    <div class="layout-obfuscator is-visible"></div>
+    <!-- End - obfuscator -->
 
     <!-- Begin - inner wrapper -->
     <main class="inner-wrapper" role="document">
+
+        <!-- Begin - drawer button -->
+        <div aria-expanded="false" data-toggle-drawer role="button" tabindex="0" class="layout-drawer-button">
+            <span class="icon"></span>
+        </div>
+        <!-- End - drawer toggle -->
 
         <!-- Begin - navigation -->
         {#<header class="header mdl-layout__header">#}
