--- a/docroot/themes/custom/site/src/scss/custom/components/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_loader.scss
@@ -2,8 +2,8 @@
 @import 'banner';
 @import 'breadcrumb';
 @import 'header';
-@import 'navigation';
+//@import 'navigation';
 @import 'footer';
-@import 'card';
+//@import 'card';
 @import 'button';
 @import 'angled-background';
