--- a/docroot/themes/custom/site/src/scss/custom/components/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_loader.scss
@@ -4,6 +4,6 @@
 @import 'header';
 //@import 'navigation';
 @import 'footer';
-//@import 'card';
+@import 'card';
 @import 'button';
 @import 'angled-background';
