--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_highlighted.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_highlighted.scss
@@ -43,6 +43,15 @@
   }
 }
 
+// Light gray
+.angled-background-color-light-gray {
+
+  // Highlighted
+  .field--name-field-highlighted {
+    color: $brand-secondary;
+  }
+}
+
 // Gray
 .angled-background-color-gray {
 
