--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_link.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_link.scss
@@ -50,6 +50,18 @@
   }
 }
 
+// Light gray
+.angled-background-color-light-gray {
+
+  // Link
+  .field--name-field-link {
+
+    a {
+      @extend .btn-primary;
+    }
+  }
+}
+
 // Gray
 .angled-background-color-gray {
 
