--- a/docroot/themes/custom/site/templates/node/teaser/node--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--teaser.html.twig
@@ -1,4 +1,4 @@
-<article{{ attributes.addClass(classes) }} class="node-teaser">
+<article class="node-teaser node-teaser-news">
     <div class="card card-block">
         <h4 class="card-title">{{ label }}</h4>
 
