--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_angled-background.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_angled-background.scss
@@ -37,6 +37,14 @@
   }
 }
 
+// Light gray
+.angled-background-color-light-gray {
+
+  h1, h2, h3, h4, h5, h6, p {
+    color: $text-color;
+  }
+}
+
 // Gray
 .angled-background-color-gray {
 
