--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -27,6 +27,8 @@
     text-align: center;
     top: 40%;
     @extend h1;
+    font-size: 56px;
+    text-transform: uppercase;
     color: #fff;
     font-weight: $headings-font-weight-bold;
     left: 0;
