Correct size up header and insert logo

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -13,12 +13,17 @@
 
     <!-- Begin - header -->
     <header class="layout__header layout__header--waterfall">
+
+        <!-- Begin - logo -->
+        <div class="layout__header-logo"></div>
+        <!-- End - logo -->
+
         <div class="layout__header-row layout__header-row--top">
 
             <!-- Begin - drawer button -->
-            <div aria-expanded="false" data-toggle-drawer role="button" tabindex="0" class="layout__drawer-button">
-                <span class="icon"></span>
-            </div>
+            {#<div aria-expanded="false" data-toggle-drawer role="button" tabindex="0" class="layout__drawer-button">#}
+                {#<span class="icon"></span>#}
+            {#</div>#}
             <!-- End - drawer toggle -->
 
             <!-- Begin - title -->
@@ -27,19 +32,19 @@
 
             <!-- Begin - contact information -->
             <aside class="layout-header-contact-information">
-                <a href="tel:004575820811"><span class="icon"></span> +45 7582 0811</a> <span>Mandag - fredag <strong>08:00 - 15:00</strong></span>
+                <a href="tel:004575820811"><i class="icon"></i> +45 7582 0811</a> <span>Mandag - fredag <strong>08:00 - 15:00</strong></span>
             </aside>
             <!-- End - contact information -->
 
             <!-- Begin - tour -->
             <aside class="layout-header-tour">
-                <span class="icon"></span> Rundvisning <span><strong>Det er gratis</strong></span>
+                <i class="icon"></i> Rundvisning <span><strong>Det er gratis</strong></span>
             </aside>
             <!-- End - tour -->
 
             <!-- Begin - contact -->
             <aside class="layout-header-contact">
-                <a href="#"><span class="icon"></span> Kontakt</a>
+                <a href="#"><i class="icon"></i> Kontakt</a>
             </aside>
             <!-- End - contact -->
 
