--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -101,6 +101,19 @@
       }
     }
   }
+
+  .layout__header-row {
+    padding-left: 110px;
+    padding-right: 0;
+  }
+
+  .layout__header-logo {
+    position: absolute;
+    background: #00bcff url('../images/logo.png') center center no-repeat;
+    background-size: 100%;
+    width: 110px;
+    height: 110px;
+  }
 }
 
 // --------------------------------------------------
