--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -66,15 +66,19 @@
         </div>
         <div class="layout__header-row layout__header-row--bottom">
 
+            {% if page.header_navigation %}
+                {{ page.header_navigation }}
+            {% endif %}
+
             <!-- Begin - navigation -->
             <!-- We hide it in small screens. -->
-            <ul class="layout-navigation layout-navigation--full-width layout--large-screen-only">
-                <li class="layout-navigation__link"><a href="#">Lange ophold</a></li>
-                <li class="layout-navigation__link"><a href="#">Fag</a></li>
-                <li class="layout-navigation__link"><a href="#">Sommerkursus</a></li>
-                <li class="layout-navigation__link"><a href="#">Rundvising</a></li>
-                <li class="layout-navigation__link"><a href="#">Om VIH</a></li>
-            </ul>
+            {#<ul class="layout-navigation layout-navigation--full-width layout--large-screen-only">#}
+                {#<li class="layout-navigation__link"><a href="#">Lange ophold</a></li>#}
+                {#<li class="layout-navigation__link"><a href="#">Fag</a></li>#}
+                {#<li class="layout-navigation__link"><a href="#">Sommerkursus</a></li>#}
+                {#<li class="layout-navigation__link"><a href="#">Rundvising</a></li>#}
+                {#<li class="layout-navigation__link"><a href="#">Om VIH</a></li>#}
+            {#</ul>#}
             <!-- End - navigation -->
 
         </div>
