--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -42,8 +42,32 @@
 
     ul {
       @extend .list-inline;
-      line-height: 40px;
+      line-height: 38px;
       margin: 0;
+
+      li {
+
+        a {
+
+          &:after {
+            display: inline-block;
+            content: "|";
+            font-size: $font-size-small;
+            color: #929191;
+            margin-left: 10px;
+          }
+        }
+
+        &:last-child {
+
+          a {
+
+            &:after {
+              display: none;
+            }
+          }
+        }
+      }
     }
   }
 
@@ -78,11 +102,11 @@
   }
 
   .layout__header-row--top {
-    @include layout-header-row-height(40px);
+    @include layout-header-row-height(38px);
   }
 
   .layout__header-row--bottom {
-    @include layout-header-row-height(70px);
+    @include layout-header-row-height(67px);
     background-color: #fff;
     border-bottom: 1px solid $border-color;
 
@@ -119,7 +143,7 @@
   }
 
   .layout__header-row {
-    padding-left: 110px;
+    padding-left: 105px;
     padding-right: 0;
   }
 
@@ -127,8 +151,8 @@
     position: absolute;
     background: #00bcff url('../images/logo.png') center center no-repeat;
     background-size: 100%;
-    width: 110px;
-    height: 110px;
+    width: 105px;
+    height: 105px;
   }
 }
 
